--- a/eureka/eureka-server/src/main/resources/application-peer1.yml
+++ b/eureka/eureka-server/src/main/resources/application-peer1.yml
@@ -1,5 +1,7 @@
 server:
-  port: 1111
+#  port: 1111
+#  port: 0
+  port: ${random.int[10000,19999]}
 eureka:
   client:
     register-with-eureka: false
@@ -8,6 +10,7 @@ eureka:
       defaultZone: http://peer2:1112
   instance:
     hostname: peer1
+    instance-id: ${spring.application.name}:${random.int}
   server:
     enable-self-preservation: false
     eviction-interval-timer-in-ms: 30000
