--- a/eureka/eureka-client/pom.xml
+++ b/eureka/eureka-client/pom.xml
@@ -26,6 +26,16 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-ribbon</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.netflix.ribbon</groupId>
+            <artifactId>ribbon-eureka</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
