--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>spring-cloud-config-client</module>
         <module>spring-cloud-config-server</module>
         <module>eureka</module>
+        <module>hystrix</module>
     </modules>
     <packaging>pom</packaging>
 
