--- a/eureka/eureka-server/src/main/resources/application-peer1.yml
+++ b/eureka/eureka-server/src/main/resources/application-peer1.yml
@@ -1,13 +1,15 @@
 server:
-#  port: 1111
+  port: 1111
 #  port: 0
-  port: ${random.int[10000,19999]}
+#  port: ${random.int[10000,19999]}
 eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://peer2:1112
+      defaultZone: http://peer1:1111
+#    service-url:
+#      defaultZone: http://peer2:1112
   instance:
     hostname: peer1
     instance-id: ${spring.application.name}:${random.int}
