--- a/hystrix/pom.xml
+++ b/hystrix/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>hystrix</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
