spring-cloud hystrix 笔记及“事件源”和“订阅者”测试代码上传

--- a/hystrix/pom.xml
+++ b/hystrix/pom.xml
@@ -16,6 +16,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-hystrix</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
