--- a/hystrix/hystrix-dashboard/pom.xml
+++ b/hystrix/hystrix-dashboard/pom.xml
@@ -3,18 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>test-project</artifactId>
+        <artifactId>hystrix</artifactId>
         <groupId>com.redsun.spring.boot</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>eureka</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>eureka-server</module>
-        <module>eureka-client</module>
-        <module>eureka-consumer</module>
-    </modules>
+    <artifactId>hystrix-dashboard</artifactId>
+
 
 </project>
