--- a/hystrix/pom.xml
+++ b/hystrix/pom.xml
@@ -10,22 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>hystrix</artifactId>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-hystrix</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
-    </dependencies>
+    <packaging>pom</packaging>
+    <modules>
+        <module>hystrix-dashboard</module>
+        <module>hystrix-common</module>
+    </modules>
 
 </project>
