Hystrix 仪表盘，单应用监控实现 （仪表盘一直loading，未解决上传）

--- a/hystrix/hystrix-dashboard/pom.xml
+++ b/hystrix/hystrix-dashboard/pom.xml
@@ -11,5 +11,18 @@
 
     <artifactId>hystrix-dashboard</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix-dashboard</artifactId>
+        </dependency>
+    </dependencies>
 </project>
