Hystrix 仪表盘，turbine集群监控 （仪表盘一直loading，未解决上传）

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>spring-cloud-config-server</module>
         <module>eureka</module>
         <module>hystrix</module>
+        <module>turbine</module>
     </modules>
     <packaging>pom</packaging>
 
