--- a/config-client/pom.xml
+++ b/config-client/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-cloud-config-client</artifactId>
+    <artifactId>config-client</artifactId>
 
     <dependencies>
         <dependency>
