--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <modules>
         <module>rest-service</module>
         <module>test-service</module>
-        <module>spring-cloud-config-client</module>
-        <module>spring-cloud-config-server</module>
+        <module>config-client</module>
+        <module>config-server</module>
         <module>eureka</module>
         <module>hystrix</module>
         <module>turbine</module>
