config-server、config-client代码是实现上传，client成功获取git仓库设置的值

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -5,8 +5,8 @@ spring:
     config:
       server:
         git:
-          uri: http://192.168.13.199
-          search-paths: docs/config-repo
+          uri: git@192.168.13.199:docs/config-repo.git
+          search-paths: didispace
           username: test
           password: test
   application:
