多个应用使用多个目录区分

--- a/config-client/src/main/resources/bootstrap.yml
+++ b/config-client/src/main/resources/bootstrap.yml
@@ -5,6 +5,6 @@ spring:
       profile: dev
       label: config-label-test
   application:
-    name: didispace
+    name: itscore
 server:
   port: 8887
