1.配置中心添加用户/密码访问 2.配置中心添加健康检查的功能

--- a/config-client/src/main/resources/bootstrap.yml
+++ b/config-client/src/main/resources/bootstrap.yml
@@ -4,6 +4,8 @@ spring:
       uri: http://localhost:8888
       profile: dev
       label: config-label-test
+      username: user
+      password: userPwd
   application:
     name: itscore
 server:
