对配置进行解密

--- a/config-client/src/main/resources/bootstrap.yml
+++ b/config-client/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     config:
       uri: http://localhost:8888
       profile: dev
-      label: config-label-test
+      label: master
       username: user
       password: userPwd
   application:
