客户端添加失败快速响应与重试

--- a/config-client/src/main/resources/bootstrap.yml
+++ b/config-client/src/main/resources/bootstrap.yml
@@ -6,6 +6,7 @@ spring:
       label: master
       username: user
       password: userPwd
+      fail-fast: true
   application:
     name: itscore
 server:
