--- a/rabbitmq-hello/pom.xml
+++ b/rabbitmq-hello/pom.xml
@@ -9,11 +9,18 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>hystrix</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>hystrix-dashboard</module>
-        <module>hystrix-common</module>
-    </modules>
+    <artifactId>rabbitmq-hello</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
