--- a/eureka/eureka-server/src/main/resources/application-peer2.yml
+++ b/eureka/eureka-server/src/main/resources/application-peer2.yml
@@ -6,8 +6,11 @@ eureka:
     fetch-registry: false
     service-url:
       defaultZone: http://peer1:1111
+#    service-url:
+#      defaultZone: http://peer2:1112
   instance:
     hostname: peer2
+    instance-id: ${spring.application.name}:${random.int}
   server:
       enable-self-preservation: false
       eviction-interval-timer-in-ms: 30000
