spring-cloud stream demo实现

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>hystrix</module>
         <module>turbine</module>
         <module>rabbitmq-hello</module>
+        <module>stream-hello</module>
     </modules>
     <packaging>pom</packaging>
 
