--- a/spring-stream/cloud-stream-hello/pom.xml
+++ b/spring-stream/cloud-stream-hello/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>test-spring-boot</artifactId>
+        <artifactId>spring-stream</artifactId>
         <groupId>com.redsun.spring.boot</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>stream-hello</artifactId>
+    <artifactId>cloud-stream-hello</artifactId>
 
     <dependencies>
         <dependency>
@@ -26,5 +26,4 @@
             <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
         </dependency>
     </dependencies>
-
 </project>
