--- a/spring-stream/pom.xml
+++ b/spring-stream/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>cloud-stream-hello</module>
+        <module>spring-integration</module>
     </modules>
 
 
