--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>turbine</module>
         <module>rabbitmq-hello</module>
         <module>spring-stream</module>
+        <module>feign-consumer</module>
     </modules>
     <packaging>pom</packaging>
 
