--- a/eureka/eureka-client/pom.xml
+++ b/eureka/eureka-client/pom.xml
@@ -36,6 +36,10 @@
             <artifactId>ribbon-eureka</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
