--- a/feign/pom.xml
+++ b/feign/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>feign-consumer</module>
+        <module>hello-service-api</module>
     </modules>
 
 
