--- a/feign/pom.xml
+++ b/feign/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>feign-consumer</module>
         <module>hello-service-api</module>
+        <module>hello-service</module>
     </modules>
 
 
