修改pom文件，更改项目名称

--- a/eureka/eureka-consumer/src/main/resources/application.yml
+++ b/eureka/eureka-consumer/src/main/resources/application.yml
@@ -6,4 +6,4 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://peer1:1111/eureka/
+      defaultZone: http://192.168.11.202:1111/eureka/
