--- a/feign/feign-consumer/src/main/resources/application.yml
+++ b/feign/feign-consumer/src/main/resources/application.yml
@@ -7,3 +7,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://192.168.11.202:1111/eureka
+ribbon:
+  ConnectTimeout: 500
+  ReadTimeout: 500
