--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.redsun.spring.boot</groupId>
-    <artifactId>test-spring-boot</artifactId>
+    <artifactId>spring-cloud</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <modules>
         <module>rest-service</module>
@@ -16,7 +16,6 @@
         <module>turbine</module>
         <module>rabbitmq-hello</module>
         <module>spring-stream</module>
-        <module>feign-consumer</module>
         <module>feign</module>
     </modules>
     <packaging>pom</packaging>
